--- a/package.json
+++ b/package.json
@@ -13,11 +13,16 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@types/node": "^18.0.6",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
     "@vitejs/plugin-react": "^2.0.0",
     "typescript": "^4.6.4",
     "vite": "^3.0.0",
     "vite-plugin-dts": "^1.4.0"
+  },
+  "peerDependencies": {
+    "react" : "^18.2.0",
+    "react-dom" : "^18.2.0"
   }
 }
