--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "type": "module",
   "types": "./dist/index.d.ts",
   "files": [
-    "dist"
+    "dist",
+    "!src"
   ],
   "exports": {
     ".": {
