--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   "type": "module",
   "types": "./dist/index.d.ts",
   "files": [
-    "dist",
-    "!src"
+    "dist/**/*",
+    "!src/**/*"
   ],
   "exports": {
     ".": {
