--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
   "type": "module",
   "types": "./dist/index.d.ts",
   "files": [
-    "dist/**/*",
-    "!src/**/*"
+    "dist"
   ],
   "exports": {
     ".": {
@@ -25,6 +24,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "design-system": "file:dist",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
