--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "module": "./dist/design-system.es.js",
   "repository": "git@github.com:Tracktor/design-system.git",
   "scripts": {
+    "install": "npm run build",
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview"
@@ -39,5 +40,6 @@
   "peerDependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
-  }
+  },
+  "ins"
 }
