--- a/package.json
+++ b/package.json
@@ -26,9 +26,7 @@
   },
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
-  },
-  "devDependencies": {
+    "react-dom": "^18.2.0",
     "@types/node": "^18.0.6",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
@@ -36,6 +34,9 @@
     "typescript": "^4.6.4",
     "vite": "^3.0.0",
     "vite-plugin-dts": "^1.4.0"
+  },
+  "devDependencies": {
+
   },
   "peerDependencies": {
     "react": "^18.2.0",
