--- a/package.json
+++ b/package.json
@@ -19,14 +19,16 @@
   "module": "./dist/design-system.es.js",
   "repository": "git@github.com:Tracktor/design-system.git",
   "scripts": {
-    "install": "npm run build || yarn run build",
+    "install": "npm install . && npm run build",
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview"
   },
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react-dom": "^18.2.0"
+  },
+  "devDependencies": {
     "@types/node": "^18.0.6",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
@@ -34,9 +36,6 @@
     "typescript": "^4.6.4",
     "vite": "^3.0.0",
     "vite-plugin-dts": "^1.4.0"
-  },
-  "devDependencies": {
-
   },
   "peerDependencies": {
     "react": "^18.2.0",
