--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
     "@vitejs/plugin-react": "^2.0.0",
-    "eslint-config-react": "git+https://github.com/Tracktor/eslint-config-react",
+    "eslint-config-react": "git+https://github.com/Tracktor/eslint-config-react#1.0.0",
     "typescript": "^4.6.4",
     "vite": "^3.0.0",
     "vite-plugin-dts": "^1.4.0"
