--- a/package.json
+++ b/package.json
@@ -12,6 +12,12 @@
   "files": [
     "dist"
   ],
+  "exports": {
+    ".": {
+      "import": "./dist/design-system.js",
+      "require": "./dist/design-system.umd.cjs"
+    }
+  },
   "repository": "git@github.com:Tracktor/design-system.git",
   "scripts": {
     "build": "tsc && vite build",
