--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   ],
   "exports": {
     ".": {
-      "import": "./dist/design-system.js",
+      "import": "./dist/design-system.es.js",
       "require": "./dist/design-system.umd.cjs"
     }
   },
