--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "exports": {
     ".": {
       "import": "./dist/design-system.es.js",
-      "require": "./dist/design-system.umd.cjs"
+      "require": "./dist/design-system.umd.js"
     }
   },
   "repository": "git@github.com:Tracktor/design-system.git",
