--- a/package.json
+++ b/package.json
@@ -1,45 +1,43 @@
 {
   "name": "design-system",
+  "version": "1.0.0",
   "description": "Tracktor Design System",
-  "private": true,
-  "sideEffects": false,
-  "version": "0.0.0",
-  "license": "MIT",
-  "type": "module",
-  "types": "./dist/index.d.ts",
-  "main": "./dist/design-system.umd.js",
-  "module": "./dist/design-system.es.js",
-  "files": [
-    "dist"
-  ],
-  "exports": {
-    ".": {
-      "import": "./dist/design-system.es.js",
-      "require": "./dist/design-system.umd.js"
-    }
-  },
-  "repository": "git@github.com:Tracktor/design-system.git",
+  "main": "dist/cjs/index.js",
+  "module": "dist/esm/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
-    "build": "tsc && vite build",
-    "dev": "vite",
+    "build": "rollup -c",
     "lint": "eslint .",
-    "prepare": "npm run build || yarn run build",
-    "preview": "vite preview"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Tracktor/design-system.git"
+  },
+  "author": "Mickaël Austoni",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Tracktor/design-system/issues"
+  },
+  "homepage": "https://github.com/Tracktor/design-system#readme",
   "devDependencies": {
+    "@rollup/plugin-commonjs": "^22.0.1",
+    "@rollup/plugin-node-resolve": "^13.3.0",
+    "@rollup/plugin-typescript": "^8.3.3",
     "@types/node": "^18.0.6",
     "@types/react": "^18.0.15",
-    "@types/react-dom": "^18.0.6",
-    "@vitejs/plugin-react": "^2.0.0",
     "eslint-config-react": "git+https://github.com/Tracktor/eslint-config-react#1.0.0",
-    "typescript": "^4.6.4",
-    "vite": "^3.0.0",
-    "vite-plugin-dts": "^1.4.0"
+    "postcss": "^8.4.14",
+    "rollup": "^2.77.0",
+    "rollup-plugin-dts": "^4.2.2",
+    "rollup-plugin-peer-deps-external": "^2.2.4",
+    "rollup-plugin-postcss": "^4.0.2",
+    "rollup-plugin-terser": "^7.0.2",
+    "typescript": "^4.7.4"
   },
   "dependencies": {
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
-    "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.9.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
