--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
   "types": "dist/index.d.ts",
-  "files": ["dist"],
   "scripts": {
     "build": "rollup -c",
     "lint": "eslint .",
+    "prepare": "npm run build || yarn run build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
