--- a/package.json
+++ b/package.json
@@ -2,11 +2,10 @@
   "name": "design-system",
   "version": "1.0.0",
   "description": "Tracktor Design System",
-  "main": "dist/cjs/index.js",
-  "module": "dist/esm/index.js",
+  "module": "dist/index.js",
   "types": "dist/index.d.ts",
   "files": [
-    "dist/**"
+    "dist/esm"
   ],
   "scripts": {
     "build": "rollup -c",
