--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "Tracktor Design System",
   "module": "dist/index.js",
   "types": "dist/index.d.ts",
+  "files": [
+    "dist**"
+  ],
   "scripts": {
     "build": "rollup -c",
     "lint": "eslint .",
