--- a/.eslintrc
+++ b/.eslintrc
@@ -1,5 +1,8 @@
 {
   "extends": "eslint-config-react",
+  "rules": {
+    "no-restricted-imports": "off"
+  },
   "overrides": [
     {
       "files": [
