--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,11 +17,12 @@
     "module": "esnext",
     "moduleResolution": "node",
     "resolveJsonModule": true,
-    "isolatedModules": true,
+    "isolatedModules": false,
     "noEmit": true,
     "jsx": "react-jsx",
     "importsNotUsedAsValues": "error",
     "noUnusedParameters": true,
+    "rootDir": "src",
     "declaration": true,
     "declarationDir": "types",
     "emitDeclarationOnly": true,
