--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "module": "dist/index.js",
   "types": "dist/index.d.ts",
   "files": [
-    "dist/"
+    "dist"
   ],
   "sideEffects": false,
   "scripts": {
