--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "design-system",
   "version": "1.0.0",
   "description": "Tracktor Design System",
+  "main": "dist/index.js",
   "module": "dist/index.js",
   "types": "dist/index.d.ts",
   "files": [
@@ -11,6 +12,7 @@
   "scripts": {
     "build": "rollup -c",
     "lint": "eslint .",
+    "postbuild": "node scripts/resolveTsPaths",
     "prepare": "npm run build || yarn run build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -44,7 +46,8 @@
     "@emotion/styled": "^11.9.3",
     "@mui/material": "^5.9.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "rollup-plugin-multi-input": "^1.3.1"
   },
   "peerDependencies": {
     "react": "^18.2.0",
