--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -9,5 +9,10 @@
     "webpack",
     "jest",
     "src/stories/**"
-  ]
+  ],
+  "paths": {
+    "components/*": [
+      "src/components/*"
+    ],
+  }
 }
