--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "build": "rollup -c",
     "lint": "eslint .",
     "postbuild": "node scripts/resolveTsPaths",
-    "prepare": "npm run build || yarn run build",
+    "prepare": "npm run build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
