--- a/package.json
+++ b/package.json
@@ -47,15 +47,13 @@
     "@emotion/styled": "^11.9.3",
     "@mui/material": "^5.9.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "rollup-plugin-multi-input": "^1.3.1"
+    "react-dom": "^18.2.0"
   },
   "peerDependencies": {
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
     "@mui/material": "^5.9.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "rollup-plugin-multi-input": "^1.3.1"
+    "react-dom": "^18.2.0"
   }
 }
