--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
   "sideEffects": false,
   "scripts": {
     "build": "rollup -c",
-    "install": "npm run build",
     "lint": "eslint .",
+    "preinstall": "npm run build",
     "postbuild": "node scripts/resolveTsPaths",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
