--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "url": "https://github.com/Tracktor/design-system/issues"
   },
   "homepage": "https://github.com/Tracktor/design-system#readme",
-  "devDependencies": {
+  "dependencies": {
     "@rollup/plugin-commonjs": "^22.0.1",
     "@rollup/plugin-node-resolve": "^13.3.0",
     "@rollup/plugin-typescript": "^8.3.3",
