--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -2,12 +2,6 @@
   "extends": "./tsconfig.json",
   "exclude": [
     "node_modules",
-    "build",
-    "dist",
-    "scripts",
-    "acceptance-tests",
-    "webpack",
-    "jest",
-    "src/stories/**"
+    "lib",
   ]
 }
