--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "lib/index.js",
   "module": "lib/index.js",
   "types": "lib/index.d.ts",
-  "outputDir": "dist",
+  "outputDir": "lib",
   "files": [
     "lib"
   ],
