--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "url": "https://github.com/Tracktor/design-system/issues"
   },
   "homepage": "https://github.com/Tracktor/design-system#readme",
-  "dependencies": {
+  "devDependencies": {
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
     "@mui/material": "^5.9.1",
