--- a/package.json
+++ b/package.json
@@ -35,16 +35,17 @@
     "rollup-plugin-dts": "^4.2.2",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-postcss": "^4.0.2",
-    "rollup-plugin-terser": "^7.0.2"
-  },
-  "devDependencies": {
+    "rollup-plugin-terser": "^7.0.2",
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
     "@mui/material": "^5.9.1",
     "@types/node": "^18.0.6",
     "@types/react": "^18.0.15",
     "eslint-config-react": "git+https://github.com/Tracktor/eslint-config-react#1.0.0",
-    "typescript": "^4.7.4"
+    "typescript": "^4.7.4",
+  },
+  "devDependencies": {
+
   },
   "peerDependencies": {
     "react": "^18.2.0",
