--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "@types/node": "^18.0.6",
     "@types/react": "^18.0.15",
     "eslint-config-react": "git+https://github.com/Tracktor/eslint-config-react#1.0.0",
-    "typescript": "^4.7.4",
+    "typescript": "^4.7.4"
   },
   "devDependencies": {
 
