--- a/package.json
+++ b/package.json
@@ -39,13 +39,12 @@
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
     "@mui/material": "^5.9.1",
-    "@types/node": "^18.0.6",
-    "@types/react": "^18.0.15",
-    "eslint-config-react": "git+https://github.com/Tracktor/eslint-config-react#1.0.0",
     "typescript": "^4.7.4"
   },
   "devDependencies": {
-
+    "@types/node": "^18.0.6",
+    "@types/react": "^18.0.15",
+    "eslint-config-react": "git+https://github.com/Tracktor/eslint-config-react#1.0.0"
   },
   "peerDependencies": {
     "react": "^18.2.0",
