--- a/package.json
+++ b/package.json
@@ -39,11 +39,11 @@
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
     "@mui/material": "^5.9.1",
+    "tslib": "^2.4.0",
 
-    "typescript": "^4.7.4"
   },
   "devDependencies": {
-    "tslib": "^2.4.0",
+    "typescript": "^4.7.4",
     "@types/node": "^18.0.6",
     "@types/react": "^18.0.15",
     "eslint-config-react": "git+https://github.com/Tracktor/eslint-config-react#1.0.0"
