--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "build": "tsc && vite build",
     "dev": "vite",
     "lint": "eslint .",
-    "preinstall": "npm run build || yarn run build",
+    "postinstall": "npm run build",
     "preview": "vite preview"
   },
   "devDependencies": {
