--- a/package.json
+++ b/package.json
@@ -45,7 +45,9 @@
   "devDependencies": {
     "@types/node": "^18.0.6",
     "@types/react": "^18.0.15",
-    "eslint-config-react": "git+https://github.com/Tracktor/eslint-config-react#1.0.0"
+    "eslint-config-react": "git+https://github.com/Tracktor/eslint-config-react#1.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "peerDependencies": {
     "react": "^18.2.0",
