--- a/package.json
+++ b/package.json
@@ -32,17 +32,17 @@
     "@types/react-dom": "^18.0.6",
     "@vitejs/plugin-react": "^2.0.0",
     "eslint-config-react": "git+https://github.com/Tracktor/eslint-config-react#1.0.0",
-    "typescript": "^4.6.4",
-    "vite": "^3.0.0",
-    "vite-plugin-dts": "^1.4.0"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "dependencies": {
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.9.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "vite": "^3.0.0",
+    "vite-plugin-dts": "^1.4.0",
+    "typescript": "^4.6.4"
   },
   "peerDependencies": {
     "react": "^18.2.0",
