--- a/package.json
+++ b/package.json
@@ -40,9 +40,10 @@
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.9.1",
     "@vitejs/plugin-react": "^2.0.0",
+    "rollup-plugin-terser": "^7.0.2",
+    "typescript": "^4.6.4",
     "vite": "^3.0.0",
-    "vite-plugin-dts": "^1.4.0",
-    "typescript": "^4.6.4"
+    "vite-plugin-dts": "^1.4.0"
   },
   "peerDependencies": {
     "react": "^18.2.0",
