--- a/package.json
+++ b/package.json
@@ -39,7 +39,10 @@
     "@emotion/styled": "^11.9.3",
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.9.1",
+    "@rollup/plugin-node-resolve": "^13.3.0",
     "@vitejs/plugin-react": "^2.0.0",
+    "rollup-plugin-peer-deps-external": "^2.2.4",
+    "rollup-plugin-postcss": "^4.0.2",
     "rollup-plugin-terser": "^7.0.2",
     "typescript": "^4.6.4",
     "vite": "^3.0.0",
