--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "@testing-library/react": "^13.3.0",
     "@types/node": "^18.0.6",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
