--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "@types/react-dom": "^18.0.6",
     "eslint-config-react": "git+https://github.com/Tracktor/eslint-config-react#1.0.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "vitest": "^0.19.1"
   },
   "dependencies": {
     "@emotion/react": "^11.9.3",
