rollback alias path

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,11 +25,11 @@
     "noUnusedParameters": true,
     "declaration": true,
     "declarationDir": ".",
-//    "paths": {
-//      "@/*": [
-//        "src/*"
-//      ]
-//    }
+    "paths": {
+      "@/*": [
+        "src/*"
+      ]
+    }
   },
   "include": [
     "src"
