--- a/package.json
+++ b/package.json
@@ -23,18 +23,10 @@
     "build": "tsc && vite build",
     "dev": "vite",
     "lint": "eslint .",
-    "postinstall": "NODE_ENV=dev npm run build",
+    "postinstall": "npm run build",
     "preview": "vite preview"
   },
   "devDependencies": {
-    "@testing-library/react": "^13.3.0",
-    "@types/node": "^18.0.6",
-    "@types/react": "^18.0.15",
-    "@types/react-dom": "^18.0.6",
-    "eslint-config-react": "git+https://github.com/Tracktor/eslint-config-react#1.0.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "vitest": "^0.19.1"
   },
   "dependencies": {
     "@emotion/react": "^11.9.3",
@@ -44,7 +36,15 @@
     "@vitejs/plugin-react": "^2.0.0",
     "typescript": "^4.6.4",
     "vite": "^3.0.0",
-    "vite-plugin-dts": "^1.4.0"
+    "vite-plugin-dts": "^1.4.0",
+    "@testing-library/react": "^13.3.0",
+    "@types/node": "^18.0.6",
+    "@types/react": "^18.0.15",
+    "@types/react-dom": "^18.0.6",
+    "eslint-config-react": "git+https://github.com/Tracktor/eslint-config-react#1.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "vitest": "^0.19.1"
   },
   "peerDependencies": {
     "react": "^18.2.0",
