--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "design-system",
   "description": "Tracktor Design System",
   "private": true,
-  "sideEffects": false,
   "version": "1.0.0",
   "license": "ISC",
   "type": "module",
@@ -27,6 +26,14 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "@testing-library/react": "^13.3.0",
+    "@types/node": "^18.0.6",
+    "@types/react": "^18.0.15",
+    "@types/react-dom": "^18.0.6",
+    "eslint-config-react": "git+https://github.com/Tracktor/eslint-config-react#1.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "vitest": "^0.19.1"
   },
   "dependencies": {
     "@emotion/react": "^11.9.3",
@@ -36,15 +43,7 @@
     "@vitejs/plugin-react": "^2.0.0",
     "typescript": "^4.6.4",
     "vite": "^3.0.0",
-    "vite-plugin-dts": "^1.4.0",
-    "@testing-library/react": "^13.3.0",
-    "@types/node": "^18.0.6",
-    "@types/react": "^18.0.15",
-    "@types/react-dom": "^18.0.6",
-    "eslint-config-react": "git+https://github.com/Tracktor/eslint-config-react#1.0.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "vitest": "^0.19.1"
+    "vite-plugin-dts": "^1.4.0"
   },
   "peerDependencies": {
     "react": "^18.2.0",
