--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "design-system",
   "description": "Tracktor Design System",
   "private": true,
+  "sideEffects": false,
   "version": "1.0.0",
   "license": "ISC",
   "type": "module",
