--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "types": "lib/index.d.ts",
   "module": "lib/index.js",
   "files": [
-    "lib"
+    "lib",
+    "!yarn.lock"
   ],
   "exports": {
     ".": {
