--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "clean:source": "rm -rf src/",
     "dev": "vite",
     "lint": "eslint .",
-    "postinstall": "yarn run build && yarn clean:source",
+    "postinstall": "yarn run build",
     "preview": "vite preview"
   },
   "devDependencies": {
