--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -3,11 +3,14 @@
     "composite": true,
     "module": "ESNext",
     "moduleResolution": "Node",
-    "allowSyntheticDefaultImports": true
+    "allowSyntheticDefaultImports": true,
+    "resolveJsonModule": true,
+    "esModuleInterop": true
   },
   "include": [
-    "vite.config.ts"
+    "vite.config.ts",
   ],
+  "files": ["package.json"],
   "exclude": [
     "node_modules",
     "lib"
