--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "clean:source": "rm -rf src/",
     "dev": "vite",
     "lint": "eslint .",
-    "postinstall": "yarn run build && yarn clean:source",
+    "postinstall": "yarn && yarn run build",
     "preview": "vite preview"
   },
   "devDependencies": {
@@ -34,20 +34,20 @@
     "@types/node": "^18.6.1",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
+    "@vitejs/plugin-react": "^2.0.0",
     "eslint-config-react": "git+https://github.com/Tracktor/eslint-config-react#1.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "typescript": "^4.7.4",
+    "vite": "^3.0.3",
+    "vite-plugin-dts": "^1.4.0",
     "vitest": "^0.19.1"
   },
   "dependencies": {
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
     "@mui/icons-material": "^5.8.4",
-    "@mui/material": "^5.9.2",
-    "@vitejs/plugin-react": "^2.0.0",
-    "typescript": "^4.7.4",
-    "vite": "^3.0.3",
-    "vite-plugin-dts": "^1.4.0"
+    "@mui/material": "^5.9.2"
   },
   "peerDependencies": {
     "react": "^18.2.0",
