--- a/package.json
+++ b/package.json
@@ -6,13 +6,15 @@
   "license": "ISC",
   "type": "module",
   "types": "lib/index.d.ts",
+  "main": "lib/index.cjs",
   "module": "lib/index.js",
   "files": [
     "lib"
   ],
   "exports": {
     ".": {
-      "import": "./lib/index.js"
+      "import": "./lib/index.js",
+      "require": "./lib/index.cjs"
     }
   },
   "repository": "git@github.com:Tracktor/design-system.git",
@@ -26,14 +28,25 @@
     "dev": "vite",
     "lint": "eslint .",
     "prepare": "yarn run build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "devDependencies": {
+    "@babel/core": "^7.18.9",
+    "@storybook/addon-actions": "^6.5.9",
+    "@storybook/addon-essentials": "^6.5.9",
+    "@storybook/addon-interactions": "^6.5.9",
+    "@storybook/addon-links": "^6.5.9",
+    "@storybook/builder-vite": "^0.2.2",
+    "@storybook/react": "^6.5.9",
+    "@storybook/testing-library": "^0.0.13",
     "@testing-library/react": "^13.3.0",
     "@types/node": "^18.6.1",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
-    "eslint-config-react": "git+https://github.com/Tracktor/eslint-config-react#1.0.0",
+    "babel-loader": "^8.2.5",
+    "eslint-config-react": "git+https://github.com/Tracktor/eslint-config-react#1.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "sass": "^1.54.0",
