--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@storybook/addon-essentials": "^6.5.9",
     "@storybook/addon-interactions": "^6.5.9",
     "@storybook/addon-links": "^6.5.9",
+    "@storybook/addon-storysource": "^6.5.9",
     "@storybook/builder-vite": "^0.2.2",
     "@storybook/react": "^6.5.9",
     "@storybook/testing-library": "^0.0.13",
@@ -50,6 +51,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "sass": "^1.54.0",
+    "storybook-dark-mode": "^1.1.0",
     "vitest": "^0.19.1"
   },
   "dependencies": {
