--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@storybook/react": "^6.5.9",
     "@storybook/testing-library": "^0.0.13",
     "@testing-library/react": "^13.3.0",
+    "@testing-library/react-hooks": "^8.0.1",
     "@types/node": "^18.6.1",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
@@ -51,6 +52,7 @@
     "eslint-config-react": "git+https://github.com/Tracktor/eslint-config-react",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-test-renderer": "^18.2.0",
     "sass": "^1.54.0",
     "storybook-dark-mode": "^1.1.0",
     "vitest": "^0.19.1"
