add test & config

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,9 @@
     "jsx": "react-jsx",
     "importsNotUsedAsValues": "error",
     "noUnusedParameters": true,
+    "types": [
+      "vitest/globals"
+    ],
     "paths": {
       "@/*": [
         "src/*"
