--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "@vitejs/plugin-react": "^2.0.0",
     "typescript": "^4.7.4",
     "vite": "^3.0.3",
+    "vite-plugin-css-injected-by-js": "^2.0.2",
     "vite-plugin-dts": "^1.4.0"
   },
   "peerDependencies": {
