--- a/package.json
+++ b/package.json
@@ -5,16 +5,16 @@
   "version": "1.0.0",
   "license": "ISC",
   "type": "module",
-  "types": "dist/index.d.ts",
-  "main": "dist/index.cjs",
-  "module": "dist/index.js",
+  "types": "dist/main.d.ts",
+  "main": "dist/main.cjs",
+  "module": "dist/main.js",
   "files": [
-    "lib"
+    "dist"
   ],
   "exports": {
     ".": {
-      "import": "./dist/index.js",
-      "require": "./dist/index.cjs"
+      "import": "./dist/main.js",
+      "require": "./dist/main.cjs"
     }
   },
   "repository": "git@github.com:Tracktor/design-system.git",
