--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "license": "ISC",
   "type": "module",
   "types": "dist/main.d.ts",
-  "main": "dist/main.cjs",
+  "main": "dist/main.umd.cjs",
   "module": "dist/main.js",
   "files": [
     "dist"
@@ -14,7 +14,7 @@
   "exports": {
     ".": {
       "import": "./dist/main.js",
-      "require": "./dist/main.cjs"
+      "require": "./dist/main.umd.cjs"
     }
   },
   "repository": "git@github.com:Tracktor/design-system.git",
