--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,6 +17,8 @@ jobs:
   publish-storybook-docker:
     executor: build-docker
     steps:
+      - setup_remote_docker:
+          version: 20.10.14
       - sre/build-docker:
           image_name: "tracktor/design-system-storybook"
           registry_pwd: $CONTAINER_REGISTRY_PWD
