--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "design-system-tracktor",
   "description": "Tracktor Design System",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "license": "ISC",
   "type": "module",
   "types": "dist/main.d.ts",
@@ -54,6 +54,7 @@
     "@types/node": "^18.7.6",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
+    "@vitejs/plugin-react": "^2.1.0",
     "@vitest/ui": "^0.22.1",
     "babel-loader": "^8.2.5",
     "eslint-config-react": "git+https://github.com/Tracktor/eslint-config-react#v1.0.1",
@@ -64,16 +65,15 @@
     "react-test-renderer": "^18.2.0",
     "sass": "^1.54.0",
     "storybook-dark-mode": "^1.1.0",
+    "vite": "^3.1.1",
+    "vite-plugin-dts": "^1.5.0",
     "vitest": "^0.22.1"
   },
   "dependencies": {
     "@emotion/react": "^11.10.0",
     "@emotion/styled": "^11.10.0",
     "@mui/material": "^5.10.1",
-    "@vitejs/plugin-react": "^2.0.1",
-    "typescript": "^4.7.4",
-    "vite": "^3.0.8",
-    "vite-plugin-dts": "^1.4.1"
+    "typescript": "^4.7.4"
   },
   "peerDependencies": {
     "react": "^18.2.0",
