--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "design-system-tracktor",
   "description": "Tracktor Design System",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "license": "ISC",
   "type": "module",
   "types": "dist/main.d.ts",
@@ -57,7 +57,7 @@
     "@vitejs/plugin-react": "^2.1.0",
     "@vitest/ui": "^0.22.1",
     "babel-loader": "^8.2.5",
-    "eslint-config-react": "git+https://github.com/Tracktor/eslint-config-react#v1.0.1",
+    "eslint-config-react-tracktor": "^1.0.2",
     "husky": "^8.0.0",
     "jsdom": "^20.0.0",
     "react": "^18.2.0",
