--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "design-system-tracktor",
   "description": "Tracktor Design System",
-  "version": "1.0.8",
+  "version": "1.0.9",
   "license": "ISC",
   "type": "module",
   "types": "dist/main.d.ts",
@@ -65,6 +65,7 @@
     "react-test-renderer": "^18.2.0",
     "sass": "^1.54.0",
     "storybook-dark-mode": "^1.1.2",
+    "typescript": "^4.7.4",
     "vite": "^3.1.7",
     "vite-plugin-dts": "^1.6.5",
     "vitest": "^0.24.1"
@@ -72,8 +73,7 @@
   "dependencies": {
     "@emotion/react": "^11.10.0",
     "@emotion/styled": "^11.10.0",
-    "@mui/material": "^5.10.1",
-    "typescript": "^4.7.4"
+    "@mui/material": "^5.10.1"
   },
   "peerDependencies": {
     "react": "^18.2.0",
