--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "design-system-tracktor",
   "description": "Tracktor Design System",
-  "version": "1.0.10",
+  "version": "1.0.11",
   "license": "ISC",
   "type": "module",
   "types": "dist/main.d.ts",
@@ -76,7 +76,7 @@
     "@mui/material": "^5.10.1"
   },
   "peerDependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react": ">=18.0.0",
+    "react-dom": ">=18.0.0"
   }
 }
