fix ci script indentation

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -82,8 +82,8 @@ jobs:
 workflows:
   chromatic-deploy:
     jobs:
-      - chromatic-deployment&
-        - filters:
+      - chromatic-deployment:
+          filters:
             branches:
               only: master
   main:
