--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,11 +14,44 @@ executors:
   build-docker:
     docker:
       - image: cimg/base:current
+
   publish-npm:
     docker:
       - image: cimg/node:16.17.0
 
+  tests:
+    docker:
+      - image: cimg/node:16.17.0
+
 jobs:
+  run-tests:
+    executor: tests
+    steps:
+      - checkout
+      - restore_cache:
+          keys:
+            - dependencies-{{ checksum "package.json" }}
+      - run:
+          name: Yarn install
+          command: yarn
+      - run:
+          command: yarn test
+      - save_cache:
+          key: dependencies-{{ checksum "package.json" }}
+          paths:
+            - node_modules
+
+  chromatic-deployment:
+    executor: tests
+    working_directory: ~/repo
+    steps:
+      - checkout
+      - restore_cache:
+          keys:
+            - dependencies-{{ checksum "package.json" }}
+      - run: yarn install
+      - run: yarn test:visual
+
   # Docker Build + Publish
   publish-storybook-docker:
     executor: build-docker
@@ -56,43 +89,20 @@ jobs:
       - run:
           name: publish on npm
           command: yarn publish
-      - save_cache:
-          key: dependencies-{{ checksum "package.json" }}
-          paths:
-            - node_modules
-  test:
-    executor: node/default
-    steps:
-      - node/restore-workspace
-      - run:
-          command: yarn test
-  chromatic-deployment:
-    docker:
-      - image: circleci/node:16
-    working_directory: ~/repo
-    steps:
-      - checkout
-      - restore_cache:
-          keys:
-            - v1-dependencies-{{ checksum "package.json" }}
-            - v1-dependencies-
-      - run: yarn install
-      - run: yarn test:visual
 
 workflows:
-  chromatic-deploy:
-    jobs:
-      - chromatic-deployment:
-          filters:
-            branches:
-              only: master
   main:
     when:
       matches:
         pattern: "^master$"
         value: << pipeline.git.branch >>
     jobs:
+      - run-tests
+      - chromatic-deployment:
+          requires: [run-tests]
       - publish-storybook-docker:
           context: *production_context
+          requires: [chromatic-deployment]
       - publish-npm:
           context: *production_context
+          requires: [chromatic-deployment]
